# Abrogue

./: CMakeLists.txt  Configuration.cpp  Configuration.ixx  Enemy.cpp  Enemy.ixx  Game.ixx  ImageLoader.cpp  Logger.cpp  Logger.ixx  ObjectPools.ixx  PhysicsComponent.cpp  PhysicsComponent.ixx  Player.ixx  README.md  RenderEngine.cpp  RenderEngine.ixx  RenderWindow.cpp  RenderWindow.ixx  config.json  main.cpp
BitmapGenerator/: main.cpp
shaders/: quad.frag  quad.vert  quadFrag.spv  quadVert.spv
src/Abrogue/: CMakeLists.txt  Enemy.cpp  ObjectPools.ixx  PhysicsComponent.cpp  PhysicsComponent.ixx  RenderEngine.cpp  RenderEngine.ixx  RenderWindow.ixx
src/Abrogue/helpers/: Configuration.ixx  Constants.ixx  ImageLoader.cpp  ImageLoader.ixx  Logger.ixx
src/BitmapGenerator/: CMakeLists.txt  main.cpp
